--- a/index.html
+++ b/index.html
@@ -50,6 +50,16 @@
   <p>Le site de rencontres 100% romantique. Laissez votre e-mail pour être les premiers à vivre la magie de l’amour.</p>
   <input type="email" placeholder="Votre e-mail">
   <br>
-  <button>S'inscrire</button>
+  <button>S'inscrire</button> 
+  <!-- Section de la page d’attente Lovency -->
+<section style="text-align: center; padding: 40px;">
+  <h2 style="color: #ff6f91;">Lovency arrive bientôt !</h2>
+  <p style="font-size: 18px;">Le site de rencontres 100% romantique.<br>
+  Laissez votre e-mail pour être les premiers à vivre la magie de l’amour.</p>
+  <div class="email-box" style="margin-top: 20px;">
+    <input type="email" placeholder="Votre e-mail" style="padding: 10px; width: 250px; border-radius: 5px; border: none;">
+    <button style="padding: 10px 20px; background-color: #fff; color: #ff6f91; font-weight: bold; border: none; border-radius: 5px; cursor: pointer;">Prévenez-moi !</button>
+  </div>
+</section>
 </body>
 </html>
